init v3